--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <header class="newheader">
 
-          <h3>This Is a Header. Rename it.</h3>
+          <h3> Election Map 2024 </h3>
 
         </header>
 
