--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
         <div class="col">
 
-          <h1>This is a headline. Change it.</h1>
+          <h1> Sigourney Bell </h1>
 
-          <h2>This is a subheadline. Change it.</h2>
+          <h2>This is a the election map for 2024. Here you can see what states went red in favor of Trump and what states went blue in favor of Harris. </h2>
 
           <p>This is story text and visualizations</p>
 
